2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (install-data-local): Uncomment

2001-07-19  Richard Hestilow  <hestilow@ximian.com>
	
	* Gnome.directory.in.in: Change name to "Main".

	* capplet-dir.c (capplet_new): Return NULL if program
	is not accessible.

	* capplet-dir-view.c (sidebar_populate): Don't show a directory
	if it is empty.

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* Removed debugging spew.

	* Removed most of the menu bar.

	* capplet-dir-view.c (about_menu_cb): Add Chema, jimmac, and myself
	to authors list.

	* capplet-dir-view-html.c (html_populate, html_write_row): Spacing
	fix.

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Added missing Gnome.directory.in.in

	* capplet-dir.c (capplet_control_launch): Don't give an error if
	the property control is NULL

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* forgot to commit the pngs

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir-view-html.c (main_allocate_cb: New function to
	compute optimal number of columns. Try resizing, it's fun!
 
2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view.c (capplet_dir_view_load_dir): Set the window title

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (ccenter_DATA): move Gnome.directory to here

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir.c (capplet_new): Remove annoying debugging output.

	* capplet-dir-view-html.c: Rewritten to use jimmac's new interface.

	* bcg_top.png, title.png, blank.png, active.png: Added.

	* Makefile.am (splash_DATA): Add new pixmap files.

	* gnomecc.glade: Remove ugly toolbar. 

	* capplet-dir-view.[ch]: Remove toolbar-related code.

2001-07-18  Chema Celorio  <chema@celorio.com>

	* capplet-dir.c (get_root_capplet_dir): if the directory is not found, warn
	and exit. Don't coredump
	* main.c (main):
